contextkit (0.5.2~unreleased) unstable; urgency=low

  * libcontextprovider c-api gained functions for manipulating list and
    map valued properties

 -- Akos PASZTORY <ext-akos.pasztory@nokia.com>  Tue, 24 Nov 2009 09:54:48 +0200

contextkit (0.5.1) unstable; urgency=low

  * Added introspection for types.
  * context-provide uses JSon for input.
  * context-listen uses JSon for output.
  * Depends on libqjson-dev version 0.6.3-6 at least, which contains a needed
    workaround for QVariant::setValue().
  * Build system fixes. (Fixes: NB#147530, NB#147531, NB#147532, MB#5899,
    MB#5996, MB#6025)

  Implemented: Swp#CntFr-322

 -- Gergely Risko <gergely+context@risko.hu>  Mon, 23 Nov 2009 11:15:47 +0200

contextkit (0.5) unstable; urgency=low

  * Released as 0.5 because of a version numbering bug, no major new features,
    which explains the version bump.
  * New core property: Position.Stable
  * context-provide:
    - starts the service automatically, restarts on property additions
    - removed the old python version, --v2 is implied now

 -- Gergely Risko <gergely+context@risko.hu>  Mon, 09 Nov 2009 15:28:43 +0200

contextkit (0.4) unstable; urgency=low

  * libcontextprovider now supports multiple providers for one property
  * Support the new ContextKit D-Bus protocol in libcontextprovider

  Implemented: SWP#CntFr-350

 -- Jean-Luc Lamadon <jean-luc.lamadon@nokia.com>  Fri, 30 Oct 2009 03:05:24 +0200

contextkit (0.3.11) unstable; urgency=low

  * Subscriber part of libcontextsubscriber now supports multiple
    providers for one property.
  * Support both the old and the new ContextKit D-Bus protocol in
    libcontextsubscriber.
  * The start command in context-provide is now able to reregister
    the service name if needed as advertised in the help.
  * context-provide supports proxying in Commander mode.
  * New test package: propertymonitor-tests

  Implemented: SWP#CntFr-349, SWP#CntFr-353, SWP#CntFr-334
