@@ -3,10 +3,19 @@
 
 #export DH_VERBOSE=1
 
+# Sanitize build environment when running inside Scratchbox 1
+ifneq (,$(wildcard /targets))
+   export SBOX_REDIRECT_TO_DIRS=
+   export PATH=/scratchbox/compilers/bin:/bin:/usr/bin:/scratchbox/tools/bin
+endif
+
 LDFLAGS+=-Wl,--as-needed
 
-Makefile:
-	./configure --prefix /usr --sysconfdir=/etc --disable-doc --disable-coverage
+configure:
+	./autogen.sh --no-configure
+
+Makefile: configure
+	./configure --prefix /usr --sysconfdir=/etc --disable-coverage
 
 build: build-stamp
 build-stamp: Makefile
@@ -14,11 +23,11 @@ build-stamp: Makefile
 	$(MAKE) LDFLAGS='$(LDFLAGS)' all
 	touch build-stamp
 
-clean: Makefile
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp 
-	$(MAKE) distclean
+	[ -f Makefile ] && $(MAKE) distclean || true
 	dh_clean
 
 install:
