@@ -2,8 +2,10 @@ contextkit (0.5.2~unreleased) unstable; urgency=low
 
   * libcontextprovider c-api gained functions for manipulating list and
     map valued properties
+  * build system simplified: after git clone you should be able to run
+    dpkg-buildpackage right away and the packages should build.
 
- -- Akos PASZTORY <ext-akos.pasztory@nokia.com>  Tue, 24 Nov 2009 09:54:48 +0200
+ -- Gergely Risko <gergely+context@risko.hu>  Thu, 26 Nov 2009 15:59:16 +0200
 
 contextkit (0.5.1) unstable; urgency=low
 
